refactored collections and optionals.